--- a/bert_t5_gpt/01_fine_tune_transformers_on_classification.ipynb
+++ b/bert_t5_gpt/01_fine_tune_transformers_on_classification.ipynb
@@ -1,14 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "主要学习了怎么从hf上拉去模型以及制作自己的模型并上传hf"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os#环境代理设置\n",
     "os.environ[\"http_proxy\"] = \"http://127.0.0.1:7890\"\n",
-    "os.environ[\"https_proxy\"] = \"http://127.0.0.1:7890\""
+    "os.environ[\"https_proxy\"] = \"http://127.0.0.1:7890\"\n"
    ]
   },
   {
