--- a/bert_t5_gpt/06_gpt2_overall.ipynb
+++ b/bert_t5_gpt/06_gpt2_overall.ipynb
@@ -1445,8 +1445,18 @@
    "id": "0d7527de",
    "metadata": {},
    "source": [
-    "lmhead_model(input_ids)\n",
+    "model_clm(input_ids)输出\n",
     "- logits\n",
+    "- past_key_values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24321204",
+   "metadata": {},
+   "source": [
+    "model_clm.transformer输出\n",
+    "- last_hidden_state\n",
     "- past_key_values"
    ]
   },
@@ -1499,16 +1509,6 @@
     "    logits = model.lm_head(hidden_states)\n",
     "    print(\"logits:\",logits.shape)\n",
     "    return logits"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "24321204",
-   "metadata": {},
-   "source": [
-    "model_clm.transformer输出\n",
-    "- last_hidden_state\n",
-    "- past_key_values"
    ]
   },
   {
