--- a/distribute/01_multi_gpus_data_parallelism.ipynb
+++ b/distribute/01_multi_gpus_data_parallelism.ipynb
@@ -123,6 +123,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b32648a1",
+   "metadata": {},
+   "source": [
+    "### DataParaller"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7cf035ca",
