--- a/distribute/01_multi_gpus_data_parallelism.ipynb
+++ b/distribute/01_multi_gpus_data_parallelism.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e7425242",
+   "metadata": {},
+   "source": [
+    "### summary\n",
+    "- 数据并行（分割） vs 模型并行（拷贝）\n",
+    "    - 该模块在每个设备上复制，每个副本处理输入的一部分\n",
+    "    - 在向后通过期间，从每个副本的梯度被求和到原始模块\n",
+    "- DP => DDP\n",
+    "    - DP：nn.DataParallel\n",
+    "    - DDP: DistributedDataParallel\n",
+    "    - Use nn.parallel.DistributedDataParallel instead of multiprocessing or nn.DataParallel and Distributed Data Parallel."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "d6132c73",
@@ -51,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "79136e79",
    "metadata": {},
    "outputs": [],
@@ -77,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "07ccff4a",
    "metadata": {},
    "outputs": [
@@ -87,7 +102,7 @@
        "torch.Size([30, 5])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "f790366c",
    "metadata": {},
    "outputs": [],
@@ -132,19 +147,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7cf035ca",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 gpus\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (5, 2)\n",
+    "model = Model(input_size, output_size)\n",
+    "if torch.cuda.device_count()>1:\n",
+    "    print(f\"{torch.cuda.device_count()} gpus\")\n",
+    "    model = nn.DataParallel(model)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9cddea48",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataParallel(\n",
+       "  (module): Model(\n",
+       "    (fc): Linear(in_features=5, out_features=2, bias=True)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0168cbc",
+   "metadata": {},
+   "source": [
+    "tensors: to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4914df2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a.is_cuda False\n",
+      "a.is_cuda False\n",
+      "b.is_cuda True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.randn(3,4)\n",
+    "print('a.is_cuda', a.is_cuda)\n",
+    "b = a.to(\"cuda:0\")\n",
+    "print('a.is_cuda', a.is_cuda)\n",
+    "print('b.is_cuda', b.is_cuda)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "416edc02",
+   "metadata": {},
+   "source": [
+    "model:to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7a36c29a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = Model(3, 4)\n",
+    "print(next(a.parameters()).is_cuda)\n",
+    "b = a.to('cuda:0')\n",
+    "print(next(a.parameters()).is_cuda)\n",
+    "print(next(b.parameters()).is_cuda)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "65225f9f",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = torch.randn(3,4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2f33324",
+   "metadata": {},
+   "source": [
+    "run the model(forward)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ab3d2af5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jiangzirou/.local/lib/python3.8/site-packages/torch/nn/modules/linear.py:117: UserWarning: Attempting to run cuBLAS, but there was no current CUDA context! Attempting to set the primary context... (Triggered internally at ../aten/src/ATen/cuda/CublasHandlePool.cpp:135.)\n",
+      "  return F.linear(input, self.weight, self.bias)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([2, 5]) output size torch.Size([2, 2])\n",
+      "Outside: input size torch.Size([30, 5]) output_size torch.Size([30, 2])\n",
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([2, 5]) output size torch.Size([2, 2])\n",
+      "Outside: input size torch.Size([30, 5]) output_size torch.Size([30, 2])\n",
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([4, 5]) output size torch.Size([4, 2])\n",
+      "\tIn Model: input size torch.Size([2, 5]) output size torch.Size([2, 2])\n",
+      "Outside: input size torch.Size([30, 5]) output_size torch.Size([30, 2])\n",
+      "\tIn Model: input size\tIn Model: input size torch.Size([2, 5]) output size torch.Size([2, 2])\n",
+      "\tIn Model: input size torch.Size([2, 5]) output size torch.Size([2, 2])\n",
+      " torch.Size([2, 5]) output size torch.Size([2, 2])\n",
+      "\tIn Model: input size torch.Size([2, 5]) output size torch.Size([2, 2])\n",
+      "\tIn Model: input size torch.Size([2, 5]) output size torch.Size([2, 2])\n",
+      "Outside: input size torch.Size([10, 5]) output_size torch.Size([10, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = model.to(device)\n",
+    "for data in rand_loader:\n",
+    "    input = data.to(device)\n",
+    "    output = model(input)\n",
+    "    print(\"Outside: input size\", input.size(),\n",
+    "          \"output_size\", output.size())"
+   ]
   }
  ],
  "metadata": {
