--- a/distribute/03_ddp_toy_example.ipynb
+++ b/distribute/03_ddp_toy_example.ipynb
@@ -46,7 +46,7 @@
     "- MASTER_PORT: 主节点监听的端口，需要是一个空闲端口\n",
     "- 所有进程通过这些信息找到彼此并进行通信\n",
     "- backend=\"nccl\": 使用NVIDIA的NCCL库，这是GPU间最高效的通信后端\n",
-    "- rank=rank: 传入当前进程的排名\n",
+    "- rank=rank: 传入当前进程的唯一标识\n",
     "- world_size=world_size: 传入总进程数"
    ]
   },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "07ec130d",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
     "    os.environ[\"MASTER_ADDR\"] = \"localhost\"\n",
     "    os.environ[\"MASTER_PORT\"] = \"12355\"\n",
     "    init_process_group(backend=\"nccl\", rank=rank, world_size=world_size)\n",
-    "    torch.cuda.set_device(rank) # 将当前进程绑定到对应的GPU上"
+    "    torch.cuda.set_device(rank) # 将当前进程绑定到对应的GPU上，确保每个进程使用不同的GPU"
    ]
   },
   {
